feat: fix reservation by using appropriate ids